@@ -1,3 +1,7 @@
+2014-02-21  Stanislas Rolland  <typo3@sjbr.ca
+
+	* Resolves #56202: Some links are wrong when absRefPrefix is configured
+
 2012-06-09  Stanislas Rolland  <typo3@sjbr.ca>
 	* Fixed bug #37866: Incorrect localization of informal labels
 	* Version 3.0.1
